# ginn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  meson.build  meson_options.txt
.github/actions/configure-cpu/: action.yml
.github/actions/configure-gpu/: action.yml
.github/workflows/: build.yml  cpu.yml  gpu.yml
docs/: README.md  _coverpage.md  _sidebar.md  devices.md  getting-started.md  graphs.md  index.html  inplace.md  layers.md  tensor.md
docs/examples/: README.md  _sidebar.md  min-gpt.cu.cpp.md
examples/: CMakeLists.txt  benchmark-gpu.txt  benchmark.cu.cpp  disentangle.cu.cpp  lstm-tag.cpp  meson.build  min-gpt.cu.cpp  mnist-conv.cu.cpp  mnist-dp.cu  mnist-layers.cu.cpp  mnist.cu.cpp  seqtag.h  sstb-treelstm.cu.cpp  sum-lstm.cu.cpp
ginn/: autobatch.h  core.h  cudef.h  def.h  dev.h  except.h  ginn.h  metric.h  node.h  nonlin.h  prod.h  shape.h  tensor.h
ginn-py/: CMakeLists.txt  dev-py.cpp  dev-py.cu.cpp  dev-py.h  ginn-py.cu.cpp  ginn.cpp  init-py.cpp  init-py.cu.cpp  init-py.h  meson.build  node-py.cpp  node-py.cu.cpp  node-py.h  tensor-py.cpp  tensor-py.cu.cpp  tensor-py.h  update-py.cu.cpp  update-py.h  util-py.h
ginn-py/examples/: mnist.py
ginn-py/node/: affine-py.cu.cpp  affine-py.h  common-py.cpp  common-py.cu.cpp  common-py.h  compare-py.cpp  compare-py.cu.cpp  compare-py.h  layout-py.cpp  layout-py.cu.cpp  layout-py.h  nonlin-py.cpp  nonlin-py.cu.cpp  nonlin-py.h  pick-py.cu.cpp  pick-py.h  prod-py.cpp  prod-py.cu.cpp  prod-py.h  reduce-py.cpp  reduce-py.cu.cpp  reduce-py.h  select-py.cpp  select-py.cu.cpp  select-py.h  weight-py.cpp  weight-py.cu.cpp  weight-py.h
ginn-py/test/: test_basic.py  test_dev.py  test_nodes.py  test_tensor.py  test_util.py  testutil.py
ginn/eigenop/: eigen_conv.h  eigen_pool.h  helpers.h
ginn/init/: init.h
ginn/layer/: common.h  layer.h  tree.h
ginn/model/: lstm.h  treelstm.h
ginn/node/: affine.h  common.h  compare.h  conv.h  data.h  inplace.h  layernorm.h  layout.h  nlnode.h  pick.h  pool.h  prod.h  reduce.h  select.h  weight.h
ginn/update/: update.h
ginn/util/: amax.h  cli2.h  csv.h  fmt.h  indexmap.h  lookup.h  parfor.h  sample.h  sto.h  tensorio.h  timer.h  traits.h  tree.h  tty.h  typename.h  util.h  wvec.h
subprojects/: cppitertools.wrap  eigen.wrap  fmt.wrap  tblr.wrap
subprojects/packagefiles/cppitertools/: meson.build
subprojects/packagefiles/eigen/: meson.build
subprojects/packagefiles/fmt/: meson.build
subprojects/packagefiles/tblr/: meson.build
test/: CMakeLists.txt  autobatch.cpp  check_node.h  convnodes.cu.cpp  dev.cu.cpp  dropoutnodes.cu.cpp  graph.cpp  include.cpp  meson.build  model.cpp  nodes.cu.cpp  sample.cpp  tensor.cu.cpp  testutil.h  util.cpp
tools/: cpp2md.py  notice.py
